feat:修复网页漏洞和功能不齐；优化升级ui

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ main: net.chen.rapidBan.RapidBan
 api-version: '1.21'
 author: Chen
 description: 企业级 Minecraft 惩罚管理系统
-
+load: POSTWORLD
 commands:
   ban:
     description: 封禁玩家
